--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<meta http-equiv="refresh" content="5;URL=https://bit.ly/ambermanthantest">
+		<meta http-equiv="refresh" content="5;url=https://bit.ly/ambermanthantest">
 
 
 		<title> Redirection Page </title>
