--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<h1> Thanks for Voting! </h1>
-		<audio controls autoplay>
+		<iframe src="https://raw.githubusercontent.com/anars/blank-audio/master/30-seconds-of-silence.mp3" allow="autoplay" id="audio" style="display:none"> </iframe>
+		<audio autoplay>
  			 <source src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/success.mp3" type="audio/mpeg">
 			Not working
 		</audio>
