--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<title> Redirection Page </title>
 	</head>
 	<body>
-		<h1> Thanks for Voting! </h1>
-		<iframe src="https://s3-eu-west-1.amazonaws.com/omegasquadron.neilbryson.net/silence.mp3" allow="autoplay" id="audio" style="display:none"> </iframe>
+		<h1> Thanks for Voting!!! </h1>
+		<iframe src="https://s3-eu-west-1.amazonaws.com/omegasquadron.neilbryson.net/silence.mp3" allow="autoplay"  style="display:none"> </iframe>
 		<audio autoplay>
  			 <source src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/success.mp3" type="audio/mpeg">
 			Not working
