--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html>
 	<head>
 		<meta http-equiv="refresh" content="5;url=https://bit.ly/ambermanthantest">
+		<script>
+window.onload = function() {
+  var context = new AudioContext();
+}
+</script>
 
 
 		<title> Redirection Page </title>
 	</head>
 	<body>
-		<h1> Thanks for Voting!!! </h1>
-		<iframe src="https://s3-eu-west-1.amazonaws.com/omegasquadron.neilbryson.net/silence.mp3" allow="autoplay"  style="display:none"> </iframe>
+		<h1> Thanks for Voting! Yay! </h1>
+		
 		<audio autoplay>
  			 <source src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/success.mp3" type="audio/mpeg">
 			Not working
