--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
 	<head>
 		<meta http-equiv="refresh" content="5;url=https://bit.ly/ambermanthantest">
 		<script>
-window.onload = function() {
-  var context = new AudioContext();
-}
+ var isChrome = /Chrome/.test(navigator.userAgent) && /Google Inc/.test(navigator.vendor);
+    if(!isChrome){
+      $('#iframeAudio').remove()
+    }
+  else{
+     $('#playAudio').remove()  
+  }
 </script>
 
 
 		<title> Redirection Page </title>
 	</head>
 	<body>
-		<h1> Thanks for Voting! Yay! </h1>
-		
+		<h1> Thanks for Voting! Yay!! </h1>
+		<iframe src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/success.mp3" allow="autoplay" style="display:none" id="iframeAudio">
+</iframe> 
 		<audio autoplay>
  			 <source src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/success.mp3" type="audio/mpeg">
 			Not working
