--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 	</head>
 	<body>
 		<h1> Thanks for Voting! Yay!! </h1>
-		<iframe src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/success.mp3" allow="autoplay" style="display:none" id="iframeAudio">
+		<iframe src="Success-3.mp3" allow="autoplay" style="display:none" id="iframeAudio">
 </iframe> 
 		<audio autoplay>
- 			 <source src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/success.mp3" type="audio/mpeg">
+ 			 <source src="Success-3.mp3" type="audio/mpeg">
 			Not working
 		</audio>
 	</body>
