--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<img class="yay1" src="thumb.svg"> 
 		<div class="text">
 			<h2 class="color"> House AmberTest </h2>
-			<h1 class="color"> Thanks for Voting!! </h1>
+			<h1 class="color"> Thanks for Voting! </h1>
 		</div>
 		<img class="yay2 rev" src="thumb.svg"> 
 		
