--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<meta http-equiv="refresh" content="5;url=https://bit.ly/ambermanthantest">
+	<meta http-equiv="refresh" content="5;url=https://forms.gle/ZZeHQdfc6BA3kB8cA/">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script>
 		var isChrome = /Chrome/.test(navigator.userAgent) && /Google Inc/.test(navigator.vendor);
