--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<meta http-equiv="refresh" content="5;url=https://forms.gle/ZZeHQdfc6BA3kB8cA/">
+	<meta http-equiv="refresh" content="5;url=#">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script>
 		var isChrome = /Chrome/.test(navigator.userAgent) && /Google Inc/.test(navigator.vendor);
@@ -25,7 +25,7 @@
 		</audio>
 		<img class="yay1" src="thumb.svg"> 
 		<div class="text">
-			<h2 class="color"> House AmberTest </h2>
+			<h2 class="color"> House Amber Vayu </h2>
 			<h1 class="color"> Thanks for Voting! </h1>
 		</div>
 		<img class="yay2 rev" src="thumb.svg"> 
