--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</audio>
 		<img class="yay1" src="thumb.svg"> 
 		<div class="text">
-			<h2 class="color"> House Amber Vayu </h2>
+			<h2 class="color"> House Vayu </h2>
 			<h1 class="color"> Thanks for Voting! </h1>
 		</div>
 		<img class="yay2 rev" src="thumb.svg"> 
