--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 		<source src="Success-3.mp3" type="audio/mpeg" id="normal">
 			Not working
 		</audio>
-		<img class="yay1" src="thumb.svg"> 
+		<img class="yay1" src="svgvayu.svg"> 
 		<div class="text">
 			<h2 class="color"> House Vayu </h2>
 			<h1 class="color"> Thanks for Voting! </h1>
 		</div>
-		<img class="yay2 rev" src="thumb.svg"> 
+		<img class="yay2 rev" src="svgvayu.svg"> 
 		
 		
 	</body>
