--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	 <meta http-equiv="refresh" content="3;url=#">
+	 <meta http-equiv="refresh" content="3;url=https://forms.gle/T77dV4S4W4pK6Cn36">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script>
 		var isChrome = /Chrome/.test(navigator.userAgent) && /Google Inc/.test(navigator.vendor);
